--- a/composer.json
+++ b/composer.json
@@ -3,8 +3,8 @@
 	"type": "phpbb-extension",
 	"description": "Create forms to collect data from you members in any forum (one form per forum)",
 	"homepage": "http://www.dmzx-web.net",
-	"version": "1.0.0-dev",
-	"time": "2017-01-09",
+	"version": "1.0.0-dev-a1",
+	"time": "2017-02-21",
 	"keywords": ["phpbb", "extension", "formcreator"],
 	"license": "GPL-2.0",
 	"authors": [
@@ -30,7 +30,7 @@
 	"extra": {
 		"display-name": "Form Maker/Creator",
 		"soft-require": {
-			"phpbb/phpbb": ">=3.2.0-a1,<3.3.0@dev"
+			"phpbb/phpbb": ">=3.2.0-a1,<3.3@dev"
 		},
 		"version-check": {
 			"host": "www.dmzx-web.net",
