--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
 	"type": "phpbb-extension",
 	"description": "Create forms to collect data from you members in any forum (one form per forum)",
 	"homepage": "http://www.dmzx-web.net",
-	"version": "1.0.0-dev-a1",
+	"version": "1.0.0-a1",
 	"time": "2017-02-21",
 	"keywords": ["phpbb", "extension", "formcreator"],
 	"license": "GPL-2.0",
